dg-charts/v1.17.1/templates/allow-sqlserver-ingress-from-datagalaxyservicesweb.networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-sqlserver-ingress-from-datagalaxyservicesweb
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: datagalaxyservicesweb
  podSelector:
    matchLabels:
      app: sqlserver
